# fast-agents

./: LICENSE  README.md  pyproject.toml  setup.py
fast_agents/: __init__.py  agent.py  cli.py  exceptions.py  hook.py  llm_context.py  pydantic_types.py  run_context.py  run_pipeline.py  schema.py  thread.py  tool.py  tool_response.py  tool_transformer.py  tool_validator.py  tui.py  validator_rule.py
fast_agents/helpers/: __init__.py  function_helper.py  handoffs_helper.py  input_filters.py  llm_context_helper.py  path_resolver.py  schema_helper.py  text_helper.py  tokenisor.py
fast_agents/tool_transformers/: __init__.py  id_to_object_id_transformer.py  json_extractor_transformer.py  sort_transformer.py  string_to_date_transformer.py
tests/: __init__.py  conftest.py  test_agent.py  test_handoffs.py  test_helpers.py  test_path_resolver.py  test_thread.py  test_thread_mock.py  test_thread_stream.py  test_tools.py
