[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-agents"
version = "0.1.0"
description = "A clean, standalone AI framework package for building AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Patrik Mojzis", email = "patrikm53@gmail.com"}
]
keywords = ["ai", "agents", "llm", "openai", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.99.9",
    "tiktoken>=0.11.0",
    "fast-validation @ git+https://github.com/patrikmojzis/fast-validation.git",
    "textual>=0.50.0"
]

[project.scripts]
fast-agents = "fast_agents.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://fast-agents.patrikmojzis.com"
Repository = "https://github.com/patrikmojzis/fast-agents"
Documentation = "https://fast-agents.patrikmojzis.com"
Issues = "https://github.com/patrikmojzis/fast-agents/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fast_agents*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true